challengeePlus - ajuste em padding right na classe .icons, dentro da media querie 768px <

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li>Lorem ipsum</li>
           <li>Lorem ipsum</li>
           <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
         </ul>
 
         <div class="icons">
