challengeePlus - estilizando bloco de compra

--- a/index.html
+++ b/index.html
@@ -32,21 +32,38 @@
 
         <div class="icons">
             <i class="material-icons md-36">search</i>
-            <i class="material-icons md-36">person</i>
+            <i class="material-icons md-36 person">person</i>
             <i class="material-icons md-36 comprar">shopping_cart</i>   
         </div>
     </section>
 
    <section class="bloco-buy">
          <div class="flex flex--flexend">
-            <div class="box-buy">
-              <p id="demo"></p>
+            <div class="boxBuy">
+              <div class="products">
+                <div class="scroll">
+                  <p id="demo"></p>
+
+                </div>
+
+                <div class="blocoPreco">
+                  <div class="preco">
+                      Total do pedido:<span class="precoValor"> R$ 20.356,95</span>
+                  </div>
+                </div>
+                <div class="blocoButton">
+                    <button class="btnComprar">
+                      FINALIZAR COMPRA
+                    </button>
+                </div>
+              </div>
             </div>
          </div>
    </section>
 
-
    
+
+   <p id="demo2"></p>
 
    
 
