challengeePlus - Calculo do preço, mascara de preço com regex, término de refatoração de layout e criação de readme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <section class="top-nav">
@@ -42,13 +41,74 @@
             <div class="boxBuy">
               <div class="products">
                 <div class="scroll">
-                  <p id="demo"></p>
+                    
+                  <div class="paddingCompras">
+                     <div class="innerCompras">
+                        <img id="img1" class="img-compras img1" src="">
+                        <div class="descriptionCompras">
+                          <div class="cortar">
+                              <p id="nome1" class="nomeProduto"></p>
+                          </div>
+                        <div class="flexDescription">
+                            <p id="qtd1" class="quantidadeProduto"></p>
+                            <p id="preco1" class="precoProduto"></p>
+                        </div>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="paddingCompras">
+                    <div class="innerCompras">
+                        <img class="img-compras img2" src="">
+                        <div class="descriptionCompras">
+                          <div class="cortar">
+                              <p id="nome2" class="nomeProduto"></p>
+                          </div>
+                        <div class="flexDescription">
+                            <p id="qtd2" class="quantidadeProduto"></p>
+                            <p id="preco2" class="precoProduto"></p>
+                        </div>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="paddingCompras">
+                      <div class="innerCompras">
+                          <img class="img-compras img3" src="">
+                          <div class="descriptionCompras">
+                            <div class="cortar">
+                                <p id="nome3" class="nomeProduto"></p>
+                            </div>
+                          <div class="flexDescription">
+                              <p id="qtd3" class="quantidadeProduto"></p>
+                              <p id="preco3" class="precoProduto"></p>
+                          </div>
+                          </div>
+                        </div>
+                    </div>
+
+                    
+                  <div class="paddingCompras">
+                    <div class="innerCompras">
+                        <img class="img-compras img4" src="">
+                        <div class="descriptionCompras">
+                          <div class="cortar">
+                              <p id="nome4" class="nomeProduto"></p>
+                          </div>
+                        <div class="flexDescription">
+                            <p id="qtd4" class="quantidadeProduto"></p>
+                            <p id="preco4" class="precoProduto"></p>
+                        </div>
+                        </div>
+                      </div>
+                  </div>
+
 
                 </div>
 
                 <div class="blocoPreco">
                   <div class="preco">
-                      Total do pedido:<span class="precoValor"> R$ 20.356,95</span>
+                      Total do pedido: <span class="precoValor"> R$</span>
                   </div>
                 </div>
                 <div class="blocoButton">
@@ -59,17 +119,9 @@
               </div>
             </div>
          </div>
-   </section>
-
-   
-
-   <p id="demo2"></p>
-
-   
+   </section> 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="src/js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
